--- a/SSBD_restful_api_v3.0.ipynb
+++ b/SSBD_restful_api_v3.0.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -812,10 +812,10 @@
     {
      "data": {
       "text/plain": [
-       "<ivisual.visual.points at 0x7f3a9a36d990>"
+       "<ivisual.visual.points at 0x7f68a86884d0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
